# Cancer-staging-proyect-pln

./: .gitignore  README.md  pyproject.toml
Codigos/: 01_Analisis.ipynb  02_Preprocesamiento.ipynb  03_Modelos_Clasicos.ipynb  04_Modelos_Avanzados.ipynb  05_Transformers..ipynb  06_Embeddings_Estaticos.ipynb  Evaluacion1.ipynb
Codigos/Analisis/: Analisis1.ipynb
Datos/Evaluacion/: tcga_simple_dev_shuffled.csv
Documentacion/: Memoria_Practica_PLNI.docx
Predicciones/Evaluacion1/: tcga_predicciones_entregar.csv
